service-definition.yaml
apiVersion: apps/v1
kind: Service

metadata:
  name: service
  labels:
    app: my-service
    
spec:
  type: NodePort
  ports:
    - targetPort: 80
      port: 80
      NodePort: 30001
  selector:
    app: myapp
    type: back-end
