IngressConfig.yaml
apiVersion: extensions/v1beta1
kind: apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
  - host: waer.my-online-store.com
    http:
      paths:
      - pathType: Prefix
        path: wear
        backend:
          service:
            name: wear-service
            port: 
              number: 80
  - host: waer.my-online-store.com
    http:
      paths:
      - pathType: Prefix
        path: watch
        backend:
          service:
            name: watch-service
            port: 
              number: 80
